--- a/00_lucas_cleaning.ipynb
+++ b/00_lucas_cleaning.ipynb
@@ -582,337 +582,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "84b9089b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "af3f2907",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "80c92225",
-   "metadata": {},
-   "source": [
-    "## Save Datasetas an Excel file\n",
-    "\n",
-    "Save dataset information as an Excel file for analysis. \n",
-    "\n",
-    "Columns:\n",
-    "* Feature name\n",
-    "* Data type\n",
-    "* Null and Non-null count\n",
-    "* Null percentage\n",
-    "* Number of unique values\n",
-    "* Range of values or categories\n",
-    "* Most common value\n",
-    "* Mean, Standard Deviation, and Median"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bdb3a50b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>feature</th>\n",
-       "      <th>dtype</th>\n",
-       "      <th>null_count</th>\n",
-       "      <th>non_null_count</th>\n",
-       "      <th>null_percentage</th>\n",
-       "      <th>n_unique</th>\n",
-       "      <th>value_range_or_categories</th>\n",
-       "      <th>most_common</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>std</th>\n",
-       "      <th>median</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Depth</td>\n",
-       "      <td>object</td>\n",
-       "      <td>0</td>\n",
-       "      <td>18123</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0-20 cm, 0-10 cm, 10-20 cm, 20-30 cm</td>\n",
-       "      <td>0-20 cm</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>POINTID</td>\n",
-       "      <td>int64</td>\n",
-       "      <td>0</td>\n",
-       "      <td>18123</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>18123</td>\n",
-       "      <td>26521970 to 64981672</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4.293761e+07</td>\n",
-       "      <td>8.307640e+06</td>\n",
-       "      <td>4.488223e+07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>pH_CaCl2</td>\n",
-       "      <td>float64</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18122</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>59</td>\n",
-       "      <td>2.6 to 9.8</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5.672045e+00</td>\n",
-       "      <td>1.394676e+00</td>\n",
-       "      <td>5.700000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>pH_H2O</td>\n",
-       "      <td>float64</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18122</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>530</td>\n",
-       "      <td>3.34 to 10.43</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6.226439e+00</td>\n",
-       "      <td>1.315100e+00</td>\n",
-       "      <td>6.250000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>EC</td>\n",
-       "      <td>float64</td>\n",
-       "      <td>9</td>\n",
-       "      <td>18114</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>3889</td>\n",
-       "      <td>1.42 to 1295.6</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.792744e+01</td>\n",
-       "      <td>2.366877e+01</td>\n",
-       "      <td>1.380500e+01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>OC</td>\n",
-       "      <td>object</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18122</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>2244</td>\n",
-       "      <td>12.4, 16.7, 47.5, 28.1, 19.4, 18, 12.5, 22.9, ...</td>\n",
-       "      <td>14.4</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>CaCO3</td>\n",
-       "      <td>object</td>\n",
-       "      <td>7494</td>\n",
-       "      <td>10629</td>\n",
-       "      <td>41.35</td>\n",
-       "      <td>735</td>\n",
-       "      <td>3, 1, 2, 96, 86, 112, 271, 5, 6, 14, 90, 46, 4...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>P</td>\n",
-       "      <td>object</td>\n",
-       "      <td>25</td>\n",
-       "      <td>18098</td>\n",
-       "      <td>0.14</td>\n",
-       "      <td>1250</td>\n",
-       "      <td>&lt; LOD, 12.3, 68, 58.1, 17.5, 62.2, 22.3, 28.4,...</td>\n",
-       "      <td>&lt; LOD</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>N</td>\n",
-       "      <td>object</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18122</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>313</td>\n",
-       "      <td>1.1, 1.3, 3.1, 2, 2.2, 1.4, 2.1, 2.9, 1.6, 2.7...</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>K</td>\n",
-       "      <td>object</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18122</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>5148</td>\n",
-       "      <td>101.9, 51.2, 114.8, 165.8, 42.1, 277.2, 315.5,...</td>\n",
-       "      <td>&lt; LOD</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    feature    dtype  null_count  non_null_count  null_percentage  n_unique  \\\n",
-       "0     Depth   object           0           18123             0.00         4   \n",
-       "1   POINTID    int64           0           18123             0.00     18123   \n",
-       "2  pH_CaCl2  float64           1           18122             0.01        59   \n",
-       "3    pH_H2O  float64           1           18122             0.01       530   \n",
-       "4        EC  float64           9           18114             0.05      3889   \n",
-       "5        OC   object           1           18122             0.01      2244   \n",
-       "6     CaCO3   object        7494           10629            41.35       735   \n",
-       "7         P   object          25           18098             0.14      1250   \n",
-       "8         N   object           1           18122             0.01       313   \n",
-       "9         K   object           1           18122             0.01      5148   \n",
-       "\n",
-       "                           value_range_or_categories most_common  \\\n",
-       "0               0-20 cm, 0-10 cm, 10-20 cm, 20-30 cm     0-20 cm   \n",
-       "1                               26521970 to 64981672         NaN   \n",
-       "2                                         2.6 to 9.8         NaN   \n",
-       "3                                      3.34 to 10.43         NaN   \n",
-       "4                                     1.42 to 1295.6         NaN   \n",
-       "5  12.4, 16.7, 47.5, 28.1, 19.4, 18, 12.5, 22.9, ...        14.4   \n",
-       "6  3, 1, 2, 96, 86, 112, 271, 5, 6, 14, 90, 46, 4...           1   \n",
-       "7  < LOD, 12.3, 68, 58.1, 17.5, 62.2, 22.3, 28.4,...       < LOD   \n",
-       "8  1.1, 1.3, 3.1, 2, 2.2, 1.4, 2.1, 2.9, 1.6, 2.7...         1.3   \n",
-       "9  101.9, 51.2, 114.8, 165.8, 42.1, 277.2, 315.5,...       < LOD   \n",
-       "\n",
-       "           mean           std        median  \n",
-       "0           NaN           NaN           NaN  \n",
-       "1  4.293761e+07  8.307640e+06  4.488223e+07  \n",
-       "2  5.672045e+00  1.394676e+00  5.700000e+00  \n",
-       "3  6.226439e+00  1.315100e+00  6.250000e+00  \n",
-       "4  1.792744e+01  2.366877e+01  1.380500e+01  \n",
-       "5           NaN           NaN           NaN  \n",
-       "6           NaN           NaN           NaN  \n",
-       "7           NaN           NaN           NaN  \n",
-       "8           NaN           NaN           NaN  \n",
-       "9           NaN           NaN           NaN  "
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = merged.copy() # Copy the merged dataframe \n",
-    "\n",
-    "summary = []\n",
-    "\n",
-    "for col in df.columns:\n",
-    "    col_data = df[col]\n",
-    "    nulls = col_data.isnull().sum()\n",
-    "    non_nulls = len(df) - nulls\n",
-    "    null_pct = (nulls / len(df)) * 100\n",
-    "    dtype = col_data.dtype\n",
-    "    n_unique = col_data.nunique(dropna=True)\n",
-    "\n",
-    "    # Base summary\n",
-    "    summary_dict = {\n",
-    "        'feature': col,\n",
-    "        'dtype': dtype,\n",
-    "        'null_count': nulls,\n",
-    "        'non_null_count': non_nulls,\n",
-    "        'null_percentage': round(null_pct, 2),\n",
-    "        'n_unique': n_unique\n",
-    "    }\n",
-    "\n",
-    "    if pd.api.types.is_numeric_dtype(col_data):\n",
-    "        # Numerical stats\n",
-    "        min_val = col_data.min()\n",
-    "        max_val = col_data.max()\n",
-    "        mean_val = col_data.mean()\n",
-    "        std_val = col_data.std()\n",
-    "        median_val = col_data.median()\n",
-    "        value_info = f\"{min_val} to {max_val}\"\n",
-    "\n",
-    "        summary_dict.update({\n",
-    "            'value_range_or_categories': value_info,\n",
-    "            'mean': mean_val,\n",
-    "            'std': std_val,\n",
-    "            'median': median_val\n",
-    "        })\n",
-    "\n",
-    "    else:\n",
-    "        # Categorical or object-type stats\n",
-    "        unique_vals = col_data.dropna().unique()\n",
-    "        value_info = \", \".join(map(str, unique_vals[:20]))\n",
-    "        if len(unique_vals) > 20:\n",
-    "            value_info += \" (truncated)\"\n",
-    "        try:\n",
-    "            most_common = col_data.mode().iloc[0]\n",
-    "        except:\n",
-    "            most_common = None\n",
-    "\n",
-    "        summary_dict.update({\n",
-    "            'value_range_or_categories': value_info,\n",
-    "            'most_common': most_common\n",
-    "        })\n",
-    "\n",
-    "    summary.append(summary_dict)\n",
-    "\n",
-    "# Create final summary DataFrame\n",
-    "null_summary_df = pd.DataFrame(summary)\n",
-    "\n",
-    "# Save to Excel with index\n",
-    "null_summary_df.to_excel(\"column_summary.xlsx\", index=True)\n",
-    "\n",
-    "# Display the DataFrame (optional if in a notebook)\n",
-    "null_summary_df.head(10)\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "d93126cd",
    "metadata": {},
@@ -924,19 +593,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "45878a57",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Features which need converting\n",
+    "# Features which need LOD checking\n",
     "pred_cols = ['OC', 'N']\n",
     "other_pred_cols = ['CaCO3', 'P', 'K']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "d56902db",
    "metadata": {},
    "outputs": [
@@ -953,6 +622,7 @@
     }
    ],
    "source": [
+    "# Find out how many null values or \"<LOD\" entries there are for each laboratory tested feature\n",
     "for col in pred_cols + other_pred_cols:\n",
     "    null_count = merged[col].isnull().sum()\n",
     "    nonull_df = merged[~merged[col].isnull()]\n",
@@ -962,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "e3192dde",
    "metadata": {},
    "outputs": [
@@ -988,6 +658,7 @@
     "               'P': 5.0,\n",
     "               'K': 5.0}\n",
     "\n",
+    "# Replace all those <LOD (not target variables) with the value that is half the LOD\n",
     "for col in other_pred_cols:\n",
     "    merged.loc[merged[col].astype(str).str.contains(\"<\", na=False), col] = lod_halfway[col]"
    ]
@@ -1002,11 +673,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "3251c090",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create lists of the numerical columns and the date columns\n",
     "cat_to_num_cols = ['lc1_perc', 'lc2_perc', 'lu1_perc', 'lu2_perc', 'soil_stones_perc', ] + pred_cols + other_pred_cols\n",
     "datetime_cols = ['survey_date', 'SURVEY_DATE']"
    ]
@@ -1049,12 +721,12 @@
    "id": "4dc4bafe",
    "metadata": {},
    "source": [
-    "#### Depth within the top 20cm Topsoil"
+    "#### Depth == `0-20cm`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "fddacefc",
    "metadata": {},
    "outputs": [
@@ -1068,7 +740,8 @@
    ],
    "source": [
     "len_before = len(merged)\n",
-    "# Depth of samples within the top 20cm of topsoil\n",
+    "\n",
+    "# Select samples within the top 20cm of topsoil\n",
     "merged = merged[merged['Depth'].isin(['0-20 cm'])]\n",
     "\n",
     "# Drop filter columns\n",
@@ -1084,12 +757,14 @@
    "id": "c2ba1e07",
    "metadata": {},
    "source": [
-    "#### GPS Precision"
+    "#### GPS Precision\n",
+    "* Identify the optimal precision\n",
+    "* Filter by values under this precision only"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "fdf3c3d9",
    "metadata": {},
    "outputs": [
@@ -1114,6 +789,7 @@
     "ax1.set_xlabel(\"GPS Precision (m)\")\n",
     "ax1.set_title(\"GPS Precision of all samples\")\n",
     "\n",
+    "# Filter precision by <20m and plot the histogram again to see the spread without outliers\n",
     "precision = 20\n",
     "higher_prec = merged[merged['gps_prec'] < precision]\n",
     "sns.histplot(higher_prec['gps_prec'], bins=precision, ax=ax2, color='lightgrey')\n",
