--- a/02a_landsat_preprocessing.ipynb
+++ b/02a_landsat_preprocessing.ipynb
@@ -516,23 +516,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "b6ef0ae0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "447344"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(df)"
+    "print(f\"Length of final dataframe: {len(df)}\")"
    ]
   },
   {
@@ -554,14 +543,6 @@
     "LANDSAT_CSV_PROCESSED = \"data/modelling/365day_datasets/processed/20250807_landsat_band_values_365days.csv\"\n",
     "df.to_csv(LANDSAT_CSV_PROCESSED, index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f45774c8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
